<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/productName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/baseMarginPaddigng"
        android:layout_marginStart="@dimen/baseMarginPaddigng"
        android:layout_marginTop="@dimen/baseMarginPaddigng"
        android:textColor="@color/productName"
        android:textSize="@dimen/product_item_producName_TextSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/base_productName" />

    <TextView
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/baseMarginPaddigng"
        android:layout_marginStart="@dimen/baseMarginPaddigng"
        android:layout_marginTop="@dimen/baseMarginPaddigng"
        android:gravity="end"
        android:textColor="@color/price"
        android:textSize="@dimen/product_item_price_TextSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/productName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/productName"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/base_price" />

    <TextView
        android:id="@+id/quantityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/baseMarginPaddigng"
        android:layout_marginStart="@dimen/baseMarginPaddigng"
        android:layout_marginTop="@dimen/baseMarginPaddigng"
        android:textColor="@color/quantity"
        android:textSize="@dimen/product_item_quantity_TextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productName"
        android:text="@string/base_quantityLabel" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/baseMarginPaddigng"
        android:layout_marginStart="@dimen/baseMarginPaddigng"
        android:layout_marginTop="@dimen/baseMarginPaddigng"
        android:gravity="end"
        android:textColor="@color/quantity"
        android:textSize="@dimen/product_item_quantity_TextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/productName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/quantityLabel"
        app:layout_constraintTop_toBottomOf="@+id/productName"
        tools:text="@string/base_quantityNumber" />

    <ImageView
        android:id="@+id/sale"
        android:layout_width="@dimen/sale_w"
        android:layout_height="@dimen/common_h"
        app:layout_constraintBottom_toBottomOf="@+id/quantity"
        app:layout_constraintEnd_toEndOf="@+id/price"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/quantity"
        app:layout_constraintTop_toTopOf="@+id/quantity"
        app:srcCompat="@drawable/sale" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>